force-app/main/default/objects/ssot__RegulationClauseVersion__dlm/fields/ssot__ChangeSummary__c.field-meta.xml
<CustomField>
    <fullName>ssot__ChangeSummary__c</fullName>
    <label>Change Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ChangeSummary</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>