force-app/main/default/objects/ssot__RegulationClauseVersion__dlm/fields/ssot__ClauseText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClauseText__c</fullName>
    <label>Clause Text</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClauseText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>