force-app/main/default/objects/ssot__RegulationClauseVersion__dlm/fields/ssot__ContentDocumentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentDocumentId__c</fullName>
    <label>Content Document</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentDocumentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>