force-app/main/default/objects/ssot__RegulationClauseVersion__dlm/fields/ssot__IsAiGenerated__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsAiGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAiGenerated</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsAiGenerated</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>