force-app/main/default/objects/ssot__RegulationClauseVersion__dlm/fields/ssot__RegulationClauseId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulationClauseId__c</fullName>
    <label>Regulation Clause</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulationClauseId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>