force-app/main/default/objects/ssot__RegulationClauseVersion__dlm/fields/ssot__rel_1731040575999_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1731040575999_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RegulationClauseVersion_RegulationCl_rel</label>
    <referenceTo>ssot__RegulationClause__dlm</referenceTo>
    <relationshipLabel>RegulationClauseVersion_RegulationCl_rel</relationshipLabel>
    <relationshipName>rel_1731040575999_end</relationshipName>
    <type>Lookup</type>
</CustomField>